# recognizers_test

./: .gitignore  CMakeLists.txt  CriteriaNode.h  Makefile  README.md  Recognizer.h  TreeManager.h  algo_analyzer.cpp  algo_analyzer.h  comparsion_recognizer.h  criteria_recognizer.h  criteria_state.c  criteria_state.h  fake_templates.c  fake_templates.h  main.c  main.cpp  memory_counter.h  recognizer.cpp  recognizer.h  uwave_recognizer.h
